--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,6 +1,6 @@
 .input {
   display: flex;
-  width: 90%;
+  width: 95%;
   position: relative;
   align-items: center;
   justify-content: center;
@@ -45,20 +45,56 @@
   box-shadow: 0 0 5px black;
 }
 
+.container {
+  width: 95%;
+  display: flex;
+  margin-top: 10px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
 .todos {
   display: flex;
-  justify-content: space-evenly;
-  width: 90%;
-  flex-wrap: wrap;
+  flex-direction: column;
+  width: 47.5%;
+  padding: 15px;
+  border-radius: 5px;
+  background-color: rgba(50, 195, 205, 1);
+}
+
+.remove {
+  background-color: rgba(235, 103, 80, 1);
+}
+
+.dragactive {
+  background-color: rgb(0, 221, 236);
+}
+
+.dragcomplete {
+  background-color: rgb(255, 38, 0);
+}
+
+.todos__heading {
+  font-size: 30px;
+  color: white;
 }
 
 .todos__single {
   display: flex;
-  width: 29.5%;
   border-radius: 5px;
   padding: 20px;
   margin-top: 15px;
   background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+  transition: 0.2s;
+}
+
+.todos__single:hover {
+  box-shadow: 0 0 5px black;
+  transform: scale(1.03);
+}
+
+.drag {
+  box-shadow: 0 0 20px black;
 }
 
 .todos__single--text {
@@ -78,9 +114,9 @@
   cursor: pointer;
 }
 
-@media (max-width: 1248px) {
+@media (max-width: 1100px) {
   .todos__single {
-    width: 40%;
+    width: 405;
   }
 }
 
@@ -90,8 +126,11 @@
   }
   .todos {
     width: 95%;
+    margin-bottom: 10px;
   }
-  .todos__single {
-    width: 100%;
+
+  .container {
+    width: 95%;
+    flex-direction: column;
   }
 }
